--- a/public_html/css/the-big-picture.css
+++ b/public_html/css/the-big-picture.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  background: url('http://kriegspiel.org/background.png') no-repeat center center fixed;
+  background: url('https://kriegspiel.org/background.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
